<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <ImageView
        android:id="@+id/personImage"
        android:layout_margin="40dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="w,1:1" />

    <TextView
        android:id="@+id/personName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@id/personImage"
        android:textSize="17sp"
        android:layout_marginTop="5dp"
        android:textColor="#000"
        android:text="@string/name_string"/>

    <TextView
        android:id="@+id/personAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@id/personName"
        android:textSize="17sp"
        android:textColor="#000"
        android:text="@string/age_string"/>

    <TextView
        android:id="@+id/personPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@id/personAge"
        android:textSize="17sp"
        android:textColor="#000"
        android:text="@string/phone_string"/>

    <TextView
        android:id="@+id/personEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@id/personPhone"
        android:textSize="17sp"
        android:textColor="#000"
        android:text="@string/email_string"/>

    <TextView
        android:id="@+id/personCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@id/personEmail"
        android:textSize="17sp"
        android:textColor="#000"
        android:text="@string/country_string"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/statusButtonView"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/acceptButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Accept"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/rejectButton"
            tools:layout_editor_absoluteY="0dp" />

        <Button
            android:id="@+id/rejectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reject"
            app:layout_constraintEnd_toStartOf="@+id/acceptButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/statusMessage"
        android:visibility="gone"
        android:text="@string/status_message"
        android:textSize="20sp"
        android:textColor="#000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>